@startuml

title __ORDER's Class Diagram__\n

  namespace com.example {
    namespace model.request.order {
      class com.example.model.request.order.CreateOrderRequest {
          - address : String
          - content : String
          - deadLine : String
          - hostId : String
          - label : String
          - pictureUrls : String
          - price : double
          - title : String
          + CreateOrderRequest()
          + CreateOrderRequest()
          + equals()
          + getAddress()
          + getContent()
          + getDeadLine()
          + getHostId()
          + getLabel()
          + getPictureUrls()
          + getPrice()
          + getTitle()
          + getUser()
          + hashCode()
          + setAddress()
          + setContent()
          + setDeadLine()
          + setHostId()
          + setLabel()
          + setPictureUrls()
          + setPrice()
          + setTitle()
          + setUser()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.example {
    namespace model.request.order {
      class com.example.model.request.order.PageOrderRequest {
          - column : String
          - pageNumber : int
          - pages : int
          - sortedType : String
          + PageOrderRequest()
          + PageOrderRequest()
          + PageOrderRequest()
          + equals()
          + getColumn()
          + getPageNumber()
          + getPages()
          + getSortedType()
          + hashCode()
          + setColumn()
          + setPageNumber()
          + setPages()
          + setSortedType()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.example {
    namespace model.request.order {
      class com.example.model.request.order.UpdateOrderRequest {
          - id : String
          - orderAddress : String
          - orderContent : String
          - orderDeadline : String
          - orderLabel : String
          - orderPictures : String
          - orderTitle : String
          + UpdateOrderRequest()
          + UpdateOrderRequest()
          + equals()
          + getId()
          + getOrderAddress()
          + getOrderContent()
          + getOrderDeadline()
          + getOrderLabel()
          + getOrderPictures()
          + getOrderTitle()
          + getOrders()
          + hashCode()
          + setId()
          + setOrderAddress()
          + setOrderContent()
          + setOrderDeadline()
          + setOrderLabel()
          + setOrderPictures()
          + setOrderTitle()
          + setOrders()
          + toString()
          # canEqual()
      }
    }
  }
  

  com.example.model.request.order.CreateOrderRequest o-- com.example.model.domain.User : user
  com.example.model.request.order.UpdateOrderRequest o-- com.example.model.domain.Orders : orders


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
